# job-chatbot-anthropic-sdk

./: .gitignore  README.md  pyproject.toml
docs/: PRD.md  PRODUCT-DESIGN.md  README.md  SYSTEM-DESIGN.md  TESTING.md  UAT-PLAN.md  USER-MANUAL.md
src/job_chatbot_anthropic_sdk/: __init__.py  main.py  models.py  orchestrator.py
src/job_chatbot_anthropic_sdk/agents/: __init__.py  company_confirm.py  db.py  scraper.py  tester.py
src/job_chatbot_anthropic_sdk/tools/: __init__.py  companies.py  storage.py  workday.py
tests/: test_smoke.py
