[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-chatbot-anthropic-sdk"
version = "0.1.0"
description = "Multi-agent job-search chatbot built with the Anthropic Python SDK"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "Rashmi Mahadevaiah" }]
dependencies = [
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
job-chatbot-anthropic-sdk = "job_chatbot_anthropic_sdk.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/job_chatbot_anthropic_sdk"]
